--- a/DS01_01_introduction_and_installation.ipynb
+++ b/DS01_01_introduction_and_installation.ipynb
@@ -53,7 +53,7 @@
     "- [Anaconda Software](https://www.anaconda.com/download/) is a bundle of\n",
     "    - python software \n",
     "    - Around 1400 python packages of data science \n",
-    "    - UI Tools like orange,IDEs(spyder,Jupyter,jupyter lab,vs code) ..etc\n",
+    "    - UI Tools like orange,IDEs(spyder,Jupyter,jupyter lab,vs code) ...etc\n",
     "  "
    ]
   },
