--- a/DS07_01_List.ipynb
+++ b/DS07_01_List.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Structures\n",
+    "* 4 types\n",
+    "* those are\n",
+    "    * list\n",
+    "    * tuple\n",
+    "    * set\n",
+    "    * dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "hUTyQmJTxqMz"
@@ -21,7 +34,7 @@
     "id": "PpcmmuxjxqM1"
    },
    "source": [
-    "## 1. Define a list with same datatypes [    ]"
+    "## Define a list with same datatypes [    ]"
    ]
   },
   {
@@ -235,7 +248,7 @@
     "id": "g82oOZyvxqNn"
    },
    "source": [
-    "# 2. Define list with different datatypes"
+    "## Define list with different datatypes"
    ]
   },
   {
@@ -325,7 +338,7 @@
     "id": "-AgaG0G0xqN6"
    },
    "source": [
-    "# 3. Nested List"
+    "## Nested List"
    ]
   },
   {
@@ -339,6 +352,13 @@
    "outputs": [],
    "source": [
     "a_nested_list = [[\"ram\",1000.50],[\"renny\",1100.23]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading The List"
    ]
   },
   {
@@ -456,7 +476,7 @@
     "id": "NXsLUPdGxqOj"
    },
    "source": [
-    "# 4. Manipulating the list\n",
+    "## Manipulating the list\n",
     "    * add items at end position\n",
     "    * add items in required position\n",
     "    * modify item values\n",
@@ -470,7 +490,7 @@
     "id": "1AkAN1vdxqOk"
    },
    "source": [
-    "## 4.1. Add items to the list"
+    "### Add items to the list"
    ]
   },
   {
@@ -600,7 +620,7 @@
     "id": "IFyAOA6VxqO2"
    },
    "source": [
-    "## 4.2. Remove item from the list"
+    "### Remove item from the list"
    ]
   },
   {
@@ -650,7 +670,7 @@
     "id": "UkzXsXUyxqO-"
    },
    "source": [
-    "## 4.3. Update items of the list"
+    "### Update items of the list"
    ]
   },
   {
@@ -724,7 +744,7 @@
     "id": "7qvYHLeGxqPR"
    },
    "source": [
-    "# 5. Memory Allocation"
+    "## Memory Allocation"
    ]
   },
   {
