changed some examples

--- a/DS08_01_Comparision Operators.ipynb
+++ b/DS08_01_Comparision Operators.ipynb
@@ -9,19 +9,22 @@
    "source": [
     "# Operators\n",
     "------------\n",
-    "1. Comparision oparators\n",
-    "2. Bool / logical operators\n",
-    "3. Numpy logical operators"
+    "* Operators are three tyoes. Those are\n",
+    "\n",
+    "    1. Comparision oparators\n",
+    "    2. Bool / logical operators\n",
+    "    3. Numpy logical operators"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "QAbhvLjYQvmi"
+    "id": "QAbhvLjYQvmi",
+    "toc-hr-collapsed": false
    },
    "source": [
-    "## 1. Comparision Operators (<, >, ==, <=, >=, !=)\n",
+    "## Comparision Operators (<, >, ==, <=, >=, !=)\n",
     "------------"
    ]
   },
@@ -32,7 +35,7 @@
     "id": "4rEXgnqaQvmk"
    },
    "source": [
-    "### 1. Comparing two integer numbers ?"
+    "### Comparing two integer numbers ?"
    ]
   },
   {
@@ -83,7 +86,7 @@
     "id": "11FCRJ6qQvmt"
    },
    "source": [
-    "### 2.  Comparing two Floats numbers ?"
+    "### Comparing two Floats numbers ?"
    ]
   },
   {
@@ -120,7 +123,7 @@
     "id": "E2lFryfQQvm8"
    },
    "source": [
-    "### 3.  Comparing two complex numbers?"
+    "### Comparing two complex numbers?"
    ]
   },
   {
@@ -156,18 +159,13 @@
     "id": "Uo6_E_AZQvnI"
    },
    "source": [
-    "### 4.  Comparing two strings ?"
+    "### Comparing two strings ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "UF0vxKAWQvnK",
-    "outputId": "211e9041-3b8d-4b30-a5f4-96a00898c763"
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -175,53 +173,19 @@
        "False"
       ]
      },
-     "execution_count": 19,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"a\"<\"a\""
+    "\"python\">\"r\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "KcT16MimQvnS",
-    "outputId": "6939a4d2-0b61-4acd-9e84-4cfc4092d27f"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"ab\"<\"aa\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "vEowJdGnQvne",
-    "outputId": "68b0f494-4d97-4994-b616-a27ab91a19e9"
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -229,15 +193,13 @@
        "True"
       ]
      },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 4,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"ab\"<\"ac\""
+    "\"python\">\"java\""
    ]
   },
   {
@@ -247,7 +209,7 @@
     "id": "6eMHpvc5Qvnl"
    },
    "source": [
-    "### 5.  Comparing two bools ?"
+    "### Comparing two bools ?"
    ]
   },
   {
@@ -284,7 +246,7 @@
     "id": "h4rpoVvkQvns"
    },
    "source": [
-    "### 6.  Comparing two lists ?"
+    "### Comparing two lists ?"
    ]
   },
   {
@@ -315,18 +277,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[10,20] > [10,18]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "bE0FJX5eQvnx"
    },
    "source": [
-    "### 7.  Comparing int and float?"
+    "### Comparing int and float?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -340,10 +322,8 @@
        "True"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -358,12 +338,12 @@
     "id": "e_6vgjfqQvn1"
    },
    "source": [
-    "### 8.  Comparing int and complex?"
+    "### Comparing int and complex?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -378,7 +358,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-f229e4527a0e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m \u001b[1;33m>\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m2J\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-f229e4527a0e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m \u001b[1;33m>\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m2J\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'complex'"
      ]
     }
@@ -394,12 +374,12 @@
     "id": "WxIiqOQxQvn6"
    },
    "source": [
-    "### 9.  Comparing int and string?"
+    "### Comparing int and string?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -414,7 +394,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-e1a23f30b0d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;34m\"ram\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-e1a23f30b0d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;34m\"ram\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'str'"
      ]
     }
@@ -430,7 +410,7 @@
     "id": "8mS7YnMhQvoA"
    },
    "source": [
-    "### 10.  Comparing int and bool?"
+    "### Comparing int and bool?"
    ]
   },
   {
@@ -467,7 +447,7 @@
     "id": "dWblXDM8QvoF"
    },
    "source": [
-    "### 11.  Comparing int and list?"
+    "### Comparing int and list?"
    ]
   },
   {
@@ -503,17 +483,10 @@
     "id": "3Q6X3azwQvoK"
    },
    "source": [
-    "### 12. Comparing int and numpy list\n",
-    "##### Types of lists?\n",
-    "**In python we have two types of lists**\n",
-    "\n",
-    "    1. list or python list\n",
-    "\n",
-    "    2. numpy list        \n",
-    "\n",
+    "### Comparing int and array\n",
     "- list can not be comparable with int\n",
     "\n",
-    "- numpy list can comparable with int\n",
+    "- array can comparable with int\n",
     "    - More about [numpy](http://www.numpy.org/) , we will learn in level 3."
    ]
   },
@@ -524,12 +497,12 @@
     "id": "X_AGTPpiQvoQ"
    },
    "source": [
-    "#### 12.1 Creating numby list?"
+    "#### Creating array ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -542,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -555,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -568,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,10 +555,8 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -595,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -609,70 +580,13 @@
        "1"
       ]
      },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 13,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np_1d_array.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "IeU0jAeRQvo0",
-    "outputId": "08bd5001-16f9-4d4a-f4bb-523e1158df35"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False,  True,  True])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Comparing int and numpy list?\n",
-    "35<np_1d_array # condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "kanFRbjYQvo4",
-    "outputId": "ccd281ee-1848-4459-ed6e-eecd7ea006ea"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([45, 90])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_1d_array[15<np_1d_array] # object[<condition>]"
    ]
   },
   {
@@ -683,27 +597,54 @@
     "id": "vFLMbd9WQvo_"
    },
    "source": [
-    "`Use Case:` How Many Students passed in the exam. pass mark is 35 and Students got marks as shown below\n"
+    "#### `Use Case:` If pass mark is 35 and Students got marks as shown below then How Many Students passed in the exam ??\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marks =np.array([10,40,20,45,55,70,80,90,25,65])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "array([ True, False,  True, False, False, False, False, False,  True,\n",
+       "       False])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(np.array([10,40,20,45,55,70,80,90,25,65])<35)"
+    "marks <35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Number of students passed in the exam are: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total Number of students passed in the exam are: {sum(marks<35)}\")"
    ]
   },
   {
