--- a/DS07_03_Dictionary.ipynb
+++ b/DS07_03_Dictionary.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Dictionary\n",
     "-----\n",
-    "## 1. What is dict?\n",
+    "## What is dict?\n",
     "- `key and value pair` is called as dict\n",
     "- Each key is separated from its value by a colon (:)\n",
     "- each key and value pair is separated with comma,\n",
@@ -23,8 +23,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dict Syntax"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -124,159 +131,16 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "lPE2KwLR-4Qi"
+    "id": "Lty85jBP-4RZ",
+    "toc-hr-collapsed": true
    },
    "source": [
-    "## 2. Why we need dict?\n",
-    "### 2.1 Exercise: Get India population using list? Is it convenient?"
+    "## Create a simple dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6r3azuVb-4Qj",
-    "outputId": "30bfc065-0e69-43c2-e557-3866bd58671a"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a_names = [\"India\",\"USA\",\"AUS\"]\n",
-    "type(a_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "E1Yl69Rz-4Qq",
-    "outputId": "f58a8aaf-4479-4eb1-cb03-debe6052332c"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pop = [133.92,32.57,2.46]\n",
-    "type(pop)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "rB7WFlZE-4RC"
-   },
-   "source": [
-    "#### Get USA population"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "eQvCmCE1-4RJ",
-    "outputId": "8426a41e-7f64-4779-bb5b-cba9f05586bb"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#step 1: get usa index\n",
-    "a_usa_index = a_names.index(\"USA\")\n",
-    "a_usa_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "sQMyVfAi-4RS",
-    "outputId": "9ada15c9-1be6-427d-e971-714b2c773356"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32.57"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Step 2 get index relavent population\n",
-    "pop[a_usa_index]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "78TE0SwE-4RY"
-   },
-   "source": [
-    "**it is not convinent right.**let us learn dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Lty85jBP-4RZ"
-   },
-   "source": [
-    "## 3. Create a simple dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -289,11 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "RCb3cM6Z-4Rk",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "outputId": "ce23f1ee-bda1-4446-cea6-75c6a5a4bb35"
    },
    "outputs": [
@@ -326,7 +194,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mInit signature:\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m/\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m     \n",
+       "dict() -> new empty dictionary\n",
+       "dict(mapping) -> new dictionary initialized from a mapping object's\n",
+       "    (key, value) pairs\n",
+       "dict(iterable) -> new dictionary initialized as if via:\n",
+       "    d = {}\n",
+       "    for k, v in iterable:\n",
+       "        d[k] = v\n",
+       "dict(**kwargs) -> new dictionary initialized with the name=value pairs\n",
+       "    in the keyword argument list.  For example:  dict(one=1, two=2)\n",
+       "\u001b[1;31mType:\u001b[0m           type\n",
+       "\u001b[1;31mSubclasses:\u001b[0m     OrderedDict, defaultdict, Counter, _EnumDict, Bunch, Config, Struct, ColorSchemeTable, StgDict, Dict, ...\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dict?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -339,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -376,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -389,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -416,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -445,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## create empty dict"
+    "> or"
    ]
   },
   {
@@ -454,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_dict3= {}"
+    "a_dict3= {} # Create Empty Dict"
    ]
   },
   {
@@ -481,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`or`"
+    "> **or**"
    ]
   },
   {
@@ -520,12 +419,12 @@
     "id": "nj1h7ryU-4R9"
    },
    "source": [
-    "### 3.1 Get keys of dict"
+    "### Get keys of dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -557,12 +456,12 @@
     "id": "mMNhh2pE-4SE"
    },
    "source": [
-    "### 3.2 Get values of dict"
+    "### Get values of dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -591,63 +490,11 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "wFe-Zqcs-4SJ"
+    "id": "wFe-Zqcs-4SJ",
+    "toc-hr-collapsed": true
    },
    "source": [
-    "## 4. Read dict values using keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "zG2ktILo-4SL",
-    "outputId": "6cdbcd2d-e540-48c3-fdab-46613ce84907"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "133.92"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a_dict[\"India\"] # above two steps we are able to manage with one step"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "LrywBLO0-4SW",
-    "outputId": "ad090cf6-83b3-4733-b8f2-3c7688031c90"
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'slice'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-b7f68116c711>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"India\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"AUS\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'slice'"
-     ]
-    }
-   ],
-   "source": [
-    "a_dict[\"India\":\"AUS\"]"
+    "## Read dict values using keys"
    ]
   },
   {
@@ -657,12 +504,21 @@
     "id": "FwqAUb89-4Sc"
    },
    "source": [
-    "### 4.1 Insert"
+    "### Insert"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_dict = {\"India\":133.92,\"USA\":32.57,\"AUS\":2.46}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -675,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -689,10 +545,8 @@
        "{'India': 133.92, 'USA': 32.57, 'AUS': 2.46, 'China': 138.64}"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -707,12 +561,12 @@
     "id": "xXaXJl3F-4S9"
    },
    "source": [
-    "### 4.2 update values"
+    "### Update values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -725,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -739,10 +593,8 @@
        "{'India': 140, 'USA': 32.57, 'AUS': 2.46, 'China': 138.64}"
       ]
      },
-     "execution_count": 23,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 5,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -757,12 +609,12 @@
     "id": "SZzlqv8L-4TJ"
    },
    "source": [
-    "### 4.3 Del"
+    "### Del"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -775,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -807,12 +659,12 @@
     "id": "pakJZ8eB-4TY"
    },
    "source": [
-    "## 5. Nested dict"
+    "## Nested dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -827,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -856,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -885,10 +737,11 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "Iqlo-NHO-4Tt"
+    "id": "Iqlo-NHO-4Tt",
+    "toc-hr-collapsed": true
    },
    "source": [
-    "## 6. Exercise: Create <code>DataFrame</code> using dictionaries"
+    "## Exercise: Create <code>DataFrame</code> using dictionaries"
    ]
   },
   {
@@ -898,12 +751,12 @@
     "id": "xVpNjUey-4Tv"
    },
    "source": [
-    "### 6.1 create dict with emp data"
+    "### create dict with emp data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -918,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -962,12 +815,12 @@
     "id": "M5T_sv6_-4UD"
    },
    "source": [
-    "### 6.2 create dataframe using dict"
+    "### create dataframe using dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -981,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1072,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1104,10 +957,10 @@
     "id": "li8Oa0B6-4UT"
    },
    "source": [
-    "## 7.dict use cases\n",
+    "## Dict use cases\n",
     "- API export / Import using json(N number of dict)\n",
     "    - https://api.qualtrics.com/docs/getting-survey-responses-via-the-new-export-apis\n",
-    "- JSON files using internally dict\n",
+    "- Using Dict JSON files are created \n",
     "- no sql databases are using json files(ex mongo db)"
    ]
   },
@@ -1115,11 +968,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "42DmtYEV-4UU"
    },
    "source": [
-    "> Home Work: Install Mongo Db\n",
+    "## Home Work: Install Mongo Db\n",
     "\n",
     "- [Download software Community Version](https://www.mongodb.com/download-center/community)\n",
     "- install with default options\n",
@@ -1130,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1165,5 +1017,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
