--- a/DS09_Bool_numpy_operators_logical_and_or_or_or_not.ipynb
+++ b/DS09_Bool_numpy_operators_logical_and_or_or_or_not.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "aWtxlDRm2oSS"
+    "id": "aWtxlDRm2oSS",
+    "toc-hr-collapsed": false
    },
    "source": [
     "# Numpy Boolean Operators\n",
@@ -21,12 +22,12 @@
     "id": "Y8GOg0cO2oSX"
    },
    "source": [
-    "## 1.  Can we use and / or / not on Numpy array ?"
+    "## Can we use and / or / not on array ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -93,12 +94,12 @@
     "id": "x-PVlVzJ2oWB"
    },
    "source": [
-    "## 2. logical_and"
+    "## logical_and"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -157,12 +158,12 @@
     "id": "zgJXbBj52oXm"
    },
    "source": [
-    "## 3. logical_or"
+    "## logical_or"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -221,12 +222,12 @@
     "id": "thx6OT6-2oZh"
    },
    "source": [
-    "## 4. logical_not"
+    "## logical_not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -315,5 +316,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
