changed some examples

--- a/DS08_01_Comparision Operators.ipynb
+++ b/DS08_01_Comparision Operators.ipynb
@@ -11,7 +11,7 @@
     "------------\n",
     "* Operators are three tyoes. Those are\n",
     "\n",
-    "    1. Comparision oparators\n",
+    "    1. Comparison oparators\n",
     "    2. Bool / logical operators\n",
     "    3. Numpy logical operators"
    ]
@@ -24,7 +24,7 @@
     "toc-hr-collapsed": false
    },
    "source": [
-    "## Comparision Operators (<, >, ==, <=, >=, !=)\n",
+    "## Comparison Operators (<, >, ==, <=, >=, !=)\n",
     "------------"
    ]
   },
