--- a/DS10_Filtering_DataFrame_Data.ipynb
+++ b/DS10_Filtering_DataFrame_Data.ipynb
@@ -11,8 +11,8 @@
     "--------------------\n",
     "1. <code>DataFrame</code> is equal to `Table`.\n",
     "2. In R/Python/Scala table is called as <code>DataFrame</code>\n",
-    "2. `Observations/samples` is equal to `rows`\n",
-    "3. `Features/variables/dimensions` is equal to `columns`"
+    "2. `rows` are equal `Observations/samples`\n",
+    "3. `columns` are equal to `Features/variables/dimensions` "
    ]
   },
   {
@@ -22,13 +22,14 @@
     "id": "wprDA2h-7p2Y"
    },
    "source": [
-    "## 1. Create a simple <code>DataFrame</code> by importing csv file\n",
-    "- [pandas](http://pandas.pydata.org/)"
+    "## Create a simple <code>DataFrame</code> by importing csv file\n",
+    "- [Visit pandas website formore info ](http://pandas.pydata.org/)\n",
+    "- pandas package will be covered in Level 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -139,7 +140,7 @@
        "SA  South Africa   Pretoria   1.221       52.98"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -164,7 +165,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -194,7 +195,7 @@
        "Name: population, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -224,7 +225,7 @@
        "Name: population, dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -295,7 +296,7 @@
        "CH   China    Beijing  9.597      1357.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -319,7 +320,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +337,13 @@
     "colab_type": "code",
     "id": "_5GdNlGj7p21"
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -366,5 +374,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
