--- a/DS11_if_elif_else.ipynb
+++ b/DS11_if_elif_else.ipynb
@@ -20,10 +20,11 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "-PumgP3dwk1k"
+    "id": "-PumgP3dwk1k",
+    "toc-hr-collapsed": false
    },
    "source": [
-    "## 1. If elif elif ..else"
+    "## Input function"
    ]
   },
   {
@@ -33,159 +34,96 @@
     "id": "ZHfpqdPBwk1n"
    },
    "source": [
-    "### 1.1 What is input function"
+    "### How to accept input from users in run time?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8kiCHz3Swk1v",
     "outputId": "63d7a558-02fe-411e-9a69-62b28e050708"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BTN8r8O0wk2J",
     "outputId": "ae84736f-0fe0-4414-9c64-213e811c54c8"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'7'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "h210RyV0wk2c",
     "outputId": "f34d8f8a-3445-4e19-9583-2086ec1479dc"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = int(input())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "dkfwgXy2wk2v",
     "outputId": "1d0f3280-0551-4cf3-8d1a-97780655e696"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "UTU1drTwwk22",
     "outputId": "82889325-0582-44c7-b5c7-79be0f444b3a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please enter some number: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = int(input(\"please enter some number: \"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_2PDc-vzwk3M",
     "outputId": "7398ef76-0bdf-46c0-c26f-81423cd595a8"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -199,16 +137,25 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "## If elif elif ..else"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "colab_type": "text",
     "id": "sfUaGmZFwk32"
    },
    "source": [
-    "### 1.2 Print given number is +ve or -ve or zero"
+    "### Print given number is +ve or -ve or zero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -239,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -269,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -304,12 +251,12 @@
     "id": "O2Ir2Q1Ywk4r"
    },
    "source": [
-    "### 1.3. The given number is a even or not"
+    "### The given number is a even or not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -336,27 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "HrrpPr1Awk4x",
     "outputId": "05577cce-5216-47cc-e5d3-dadb320e77a7"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter some int number:21\n",
-      "21 is an odd number\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = int(input(\"Please enter some int number:\")) # accepts a int input from the user\n",
     "if x%2==0:\n",
-    "    print(x , \"is an even number\")\n",
+    "    print(f\"{x} is an even number\")\n",
     "else:\n",
     "    print(x , \"is an odd number\")"
    ]
@@ -368,8 +306,8 @@
     "id": "qaUGReSpwk49"
    },
    "source": [
-    "### 1.4 Applications what we are seeing in daily life\n",
-    "- create a cofee machine choices\n",
+    "### Applications what we are seeing in daily life\n",
+    "- Create a cofee machine choices\n",
     "- ATM different options"
    ]
   },
@@ -384,64 +322,6 @@
     "`Home Work`: \n",
     "1. Check given number is 2 and 3 divisible or not\n",
     "2. Print type of credit card based on the credit card number (example Visa , Mastero..etc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# installation\n",
-    "# IDE\n",
-    "# basic Datatypes\n",
-    "# type casting\n",
-    "# data Structures\n",
-    "# operators\n",
-    "# control flows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min([10,20,30,40])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-5\n"
-     ]
-    }
-   ],
-   "source": [
-    "minimum=0\n",
-    "for i in [-5,10,20,30,40]:\n",
-    "    if i<minimum:\n",
-    "        minimum=i\n",
-    "    \n",
-    "print(minimum)\n",
-    "        "
    ]
   },
   {
@@ -477,5 +357,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
