--- a/DS08_02_Bool_operators_and_or_not.ipynb
+++ b/DS08_02_Bool_operators_and_or_not.ipynb
@@ -533,7 +533,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
