--- a/DS12_while_statement.ipynb
+++ b/DS12_while_statement.ipynb
@@ -16,83 +16,15 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "dfK223FIKW0k"
-   },
-   "source": [
-    "## 1. Scenerio: Creating the Fibonacci series\n",
-    "* Each number in the sequence is the sum of the two numbers that `precede `it. So, the sequence goes: 1, 1, 2, 3, 5, 8, 13, 21, 34, and so on. \n",
-    "* The mathematical equation describing it is Xn+2= Xn+1 + Xn\n",
-    "![fibonacci series](https://raw.githubusercontent.com/rritec/datahexa/master/images/fibonacci-series-cpp.jpg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "lXYAuuR3KW0l",
-    "outputId": "1f143cbc-7943-4806-b4bf-db9a54a3a371"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "up to what number you need fibonacci series?  :  20\n"
-     ]
-    }
-   ],
-   "source": [
-    "a,b = 0,1\n",
-    "n = int(input(\"up to what number you need fibonacci series?  :  \")) #20\n",
-    "fibo = [] # empty list\n",
-    "while b<n:                  #iter 1: 1<20 >> True # Iter2: 1<20 >> True #iter3:2<20 >> True    \n",
-    "    fibo.append(b)     # iter1 : 1, #iter 2: 1, 1,  # iter 3: 1,1,2,\n",
-    "    a,b = b,a+b             #iter1: a=1, b = 1 #iter 2: a=1,b=2,#iter3:a =2,b=3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "bcQYuqq3KW0s",
-    "outputId": "1e91be5d-a937-46aa-bd79-70974089e304"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 2, 3, 5, 8, 13]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fibo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "collapsed": true,
     "id": "0WudvWalKW0w"
    },
    "source": [
-    "## 2. Scenerio: Upto given number print even numbers"
+    "## Scenerio: Upto given number print even numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -120,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -149,15 +81,82 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "zW_I2fnOKW05"
+    "id": "dfK223FIKW0k"
    },
    "source": [
-    "## 3. Scenerio: break above loop when even == 10"
+    "## Scenerio: Creating the Fibonacci series\n",
+    "* Each number in the sequence is the sum of the two numbers that `precede `it. So, the sequence goes: 1, 1, 2, 3, 5, 8, 13, 21, 34, and so on. \n",
+    "* The mathematical equation describing it is Xn+2= Xn+1 + Xn\n",
+    "![fibonacci series](https://raw.githubusercontent.com/rritec/datahexa/master/images/fibonacci-series-cpp.jpg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "lXYAuuR3KW0l",
+    "outputId": "1f143cbc-7943-4806-b4bf-db9a54a3a371"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "up to what number you need fibonacci series?  :  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = 0,1\n",
+    "n = int(input(\"up to what number you need fibonacci series?  :  \")) #20\n",
+    "fibo = [] # empty list\n",
+    "while b<n:                  #iter 1: 1<20 >> True # Iter2: 1<20 >> True #iter3:2<20 >> True    \n",
+    "    fibo.append(b)     # iter1 : 1, #iter 2: 1, 1,  # iter 3: 1,1,2,\n",
+    "    a,b = b,a+b             #iter1: a=1, b = 1 #iter 2: a=1,b=2,#iter3:a =2,b=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "bcQYuqq3KW0s",
+    "outputId": "1e91be5d-a937-46aa-bd79-70974089e304"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5, 8, 13]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "zW_I2fnOKW05"
+   },
+   "source": [
+    "## Scenerio: break loop when even == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -181,12 +180,12 @@
     "    even = even+2\n",
     "    even_num.append(even)  \n",
     "    if even == 10:\n",
-    "        break"
+    "        break # coming out of the loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -218,12 +217,12 @@
     "id": "DMW5JFFtKW1A"
    },
    "source": [
-    "## 4. Scenerio:  skip the iter when even == 10"
+    "## Scenerio:  skip the iter when even == 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -329,8 +328,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
