--- a/DS13_for_loop.ipynb
+++ b/DS13_for_loop.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -208,7 +208,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "1KzQ4_-hS9Mv"
    },
    "source": [
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -416,6 +415,56 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sending mail to multiple users from your Gmail account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "please enter password: ················\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sending mail ...\n",
+      "Sent Mail\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to illustrate Sending mail  \n",
+    "# to multiple users  \n",
+    "# from your Gmail account  \n",
+    "import smtplib\n",
+    "import getpass\n",
+    "  \n",
+    "# list of email_id to send the mail \n",
+    "li = [\"rritec@gmail.com\", \"dwramreddy@gmail.com\"] \n",
+    "# get password from user\n",
+    "p = getpass.getpass(\"please enter password:\") # note it is application level password,if you do not have generate it\n",
+    "print(\"sending mail ...\")\n",
+    "for i in range(len(li)): \n",
+    "    s = smtplib.SMTP('smtp.gmail.com', 587) \n",
+    "    s.starttls() \n",
+    "    s.login(\"dwramreddy@gmail.com\", p) \n",
+    "    message = \"Test mail passed\"\n",
+    "    s.sendmail(\"sender_email_id\", li[i], message) \n",
+    "    s.quit() \n",
+    "print(\"Sent Mail\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -424,20 +473,6 @@
    "source": [
     "`Home Works`:\n",
     "1. Do all howeworks of while loop with for loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mEbt3eiY36O_"
-   },
-   "outputs": [],
-   "source": [
-    "# basic data types\n",
-    "# "
    ]
   }
  ],
@@ -466,5 +501,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
